# VedaCert

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/authority-registry/: Cargo.toml
contracts/authority-registry/src/: lib.rs  test.rs
contracts/authority-registry/test_snapshots/test/: test_authority_registry_lifecycle.1.json
contracts/certification-vault/: Cargo.toml
contracts/certification-vault/src/: lib.rs  test.rs
contracts/certification-vault/test_snapshots/test/: test_unauthorized_minting.1.json  test_unauthorized_revocation.1.json  test_vault_lifecycle.1.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/__tests__/: frontend.test.tsx  integration.test.ts
frontend/src/app/analytics/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/tx/: page.tsx
frontend/src/components/: Footer.tsx  Header.tsx  Providers.tsx  TransactionCenterToast.tsx
frontend/src/contracts/: addresses.json
frontend/src/services/: stellar.ts  walletStore.ts
frontend/src/state/: feedStore.ts  txStore.ts  walletStore.ts
scripts/: deploy.js
